--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,8 @@
       "source": "/(.*)",
       "headers": [
         {
-          "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
-        },
-        {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' https://*.lucid.app https://*.lucidspark.com https://*.lucidchart.com https://lucid.app https://lucidspark.com https://lucidchart.com *"
+          "value": "frame-ancestors *;"
         }
       ]
     }
